fixed image featured stretching

--- a/theme/bolt-theme-html5up-twenty/sass/style-mobile.scss
+++ b/theme/bolt-theme-html5up-twenty/sass/style-mobile.scss
@@ -131,6 +131,12 @@ $pattern-background-size: 10em;
 			padding: 2.25em 1.5em;
 		}
 
+		&.style3 {
+			img.listing-thumb {
+				max-width: 270px;
+			}
+		}
+
 		&.style4 {
 			background-size: $pattern-background-size;
 			padding: 1.5em 1.5em 3em 1.5em;
